[gd_scene load_steps=7 format=3 uid="uid://davs63vmy1itf"]

[ext_resource type="PackedScene" uid="uid://dei5agkm5rott" path="res://scenes/background.tscn" id="1_jgfnt"]
[ext_resource type="Script" path="res://Player.gd" id="1_trs6d"]
[ext_resource type="Texture2D" uid="uid://cmqy0d54y6ka0" path="res://icon.svg" id="2_dbkyg"]
[ext_resource type="TileSet" uid="uid://w67l1ot7tq2i" path="res://map/level_tile.tres" id="3_fh3qd"]
[ext_resource type="PackedScene" uid="uid://bcyb1o54umj0y" path="res://scenes/projectile1.tscn" id="5_n1oxm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xo52q"]
size = Vector2(113, 119)

[node name="Base" type="Node2D"]
position = Vector2(-2, 1)

[node name="Level" type="Node" parent="."]

[node name="Background" parent="Level" instance=ExtResource("1_jgfnt")]
position = Vector2(-749, -587)

[node name="Player" type="CharacterBody2D" parent="Level"]
position = Vector2(361, 202)
floor_stop_on_slope = false
script = ExtResource("1_trs6d")
JUMP_VELOCITY = -800.0

[node name="Player_sprite" type="Sprite2D" parent="Level/Player"]
texture = ExtResource("2_dbkyg")

[node name="Player_collision" type="CollisionShape2D" parent="Level/Player"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_xo52q")

[node name="Player_camera" type="Camera2D" parent="Level/Player"]
zoom = Vector2(0.6, 0.6)

[node name="Dash_Ability" type="Node2D" parent="Level/Player"]

[node name="Dash_Timer" type="Timer" parent="Level/Player/Dash_Ability"]
wait_time = 0.3
one_shot = true

[node name="Can_Dash_Timer" type="Timer" parent="Level/Player/Dash_Ability"]
wait_time = 2.0
one_shot = true

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = ExtResource("3_fh3qd")
format = 2
layer_0/tile_data = PackedInt32Array(262143, 65537, 1610612738, 196608, 131073, 3, 262142, 65537, 3, 196606, 196609, 1, 196605, 131073, 1, 196604, 65537, 1, 262140, 1, 3, 196609, 196609, 3, 131073, 65537, 1, 131074, 131073, 0, 131067, 131073, 2, 65530, 131073, 2, -7, 131073, 2, 131075, 131073, 0, 131076, 196609, 0, 65541, 131073, 0, 65542, 196609, 0, 65543, 1, 3, 65540, 65537, 0, -131065, 1, 1, -65529, 1, 2, 7, 1, 2)

[node name="Projectile1" parent="Level" instance=ExtResource("5_n1oxm")]
position = Vector2(11, -253)

[connection signal="timeout" from="Level/Player/Dash_Ability/Dash_Timer" to="Level/Player" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Level/Player/Dash_Ability/Can_Dash_Timer" to="Level/Player" method="_on_can_dash_timer_timeout"]
[connection signal="body_entered" from="Level/Projectile1/Projectile_path/PathFollow2D/Projectile1" to="Level/Player" method="_on_projectile_1_body_entered"]

[editable path="Level/Projectile1"]
